# auth-service-backend

./: .gitignore  env.example  pyproject.toml  pyrightconfig.json  requirements.txt
alembic/: env.py
alembic/versions/: 9613d4a79124_initial.py  b4e91eb486a3_initial_migration_with_new_models.py  bf3d06fb83af_add_otp_table_and_email_verified_field.py
app/: main.py
app/api/: deps.py
app/api/v1/: __init__.py  auth.py  permissions.py  users.py
app/core/: __init__.py  config.py  constants.py  database.py  security.py
app/models/: __init__.py  app.py  app_function.py  app_group.py  app_permission.py  app_role.py  app_user_access.py  otp.py  permission.py  role.py  user.py
app/schemas/: __init__.py  auth.py  permission.py  user.py
app/services/: __init__.py  auth_service.py  email_service.py  permission_service.py
app/utils/: __init__.py  pagination.py  query_builder.py
